--- a/03 - CSS Variables/index.html
+++ b/03 - CSS Variables/index.html
@@ -17,8 +17,6 @@
   </header>
   <div class="container">
     <div class="controls">
-
-
       <div class="color-picker">
         <input type="color" name="base" value="#ff6347">
       </div>
@@ -26,15 +24,16 @@
         <div class="spacing-control">
           <label for="spacing">Spacing:</label>
           <input type="range" name="spacing" min="10" max="200" value="10" data-sizing="px">
-
         </div>
         <div class="blur-control">
           <label for="blur">Blur:</label>
           <input type="range" name="blur" min="0" max="25" value="10" data-sizing="px">
-
         </div>
       </div>
-
+    </div>
+    <div class="detail">
+      <p>#MonnaLisa { padding:
+        <span class="updated-value spacing">10px</span>; filter: blur(<span class="updated-value blur">10px</span>); background: <span class="updated-value base">#ff6347</span>}</p>
     </div>
     <div class="output">
       <img src="http://www.49363.com/uploads/allimg/120720/123Z52F2-0.jpg">
